Update HW 3 Student.Rmd

--- a/HW 3 Student.Rmd
+++ b/HW 3 Student.Rmd
@@ -247,4 +247,4 @@ Discuss the trade-off in accuracy and interpretability in pruning the above tree
 
 Discuss the ways a decision tree could manifest algorithmic bias.
 
-*A decision tree can manifest algorithmic bias if the training data contains historical biases or is unrepresentative of certain groups, leading to unequal predictions. For example, if features like age or socioeconomic class correlate with race or gender, the model may unintentionally favor or disadvantage specific demographics. Furthermore, like all machine learning models, applying this tree to data not representative of the training set could lead to biased and incorrect results. To tie to a in class discussion, if the data results do not have separation, it indicates that that algorithm has bias. In our example, the tree uses age, a protected class.*
+*A decision tree can have bias is it is not properly pruned. A under pruned tree will result in overfitting of the data, meaning  it won't work accurately with unseen data points like test data. Furthermore, like all machine learning models, testing this tree on data not representative of the training set could lead to biased and incorrect results. To tie to a in class discussion on fairness, if the data results do not have separation, it indicates that that  algorithm has bias. In our example, the tree uses age, a protected class.*
